Hot Fix: Buttons not appearing on iOS

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -11,6 +11,12 @@
   margin-bottom: 2em;
 }
 
+.btn--secondary {
+  background-color: $white;
+  color: $midnight;
+  font-family: $font-stack--sans;
+}
+
 .btn--mirror {
   transform: scale(-1, 1);
 
